# coverage_action

./: CMakeLists.txt  coverage.cmake
.github/workflows/: c-cpp.yml
scripts/: check-coverage.js  diff.js  targets.js
src/: main.cpp  my_shared_lib.cpp  my_static_lib.cpp  test1.cpp  test2.cpp
